added listing details page

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 VITE_REACT_APP_API_URL=http://localhost:8080
+VITE_FIREBASE_API_KEY = "AIzaSyB-7sRAtuJhsefyU4QOrebL-xpm5B7Vvr4"
+VITE_CLOUDINARY_NAME = "dnxccmbvb"
+VITE_CLOUD_PRESET = "house_preset"
